fixed body text on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -467,12 +467,16 @@ form .btn{
         
         padding-left: 0;
         padding-right: 0;
-
         border-radius: 0px;
     }
 
     .container{
         padding: 0 !important;
+    }
+
+    .header{
+        width: 95% !important;
+        font-size: 20px;
     }
 
     .gallery-h1{
